objects/Dissolution__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dissolutions</relationshipLabel>
        <relationshipName>Dissolutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Meeting_Held__c</fullName>
        <label>Date and Time of Meeting Held</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directors_Managers_Shareholders_Present__c</fullName>
        <label>Directors/Managers/Members/Shareholders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <label>Important Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LP_General_Partner__c</fullName>
        <label>LP General Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LP_Limited_Partner__c</fullName>
        <label>LP Limited Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Managed_Entity__c</fullName>
        <label>Manager Managed Entity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Managed_Person__c</fullName>
        <label>Manager Managed Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Address__c</fullName>
        <label>Meeting Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Chairman__c</fullName>
        <label>Meeting Chairman</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Secretary__c</fullName>
        <label>Meeting Secretary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Managed_Entity__c</fullName>
        <label>Member Managed Entity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Managed_Person__c</fullName>
        <label>Member Managed Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Entity__c</fullName>
        <label>Name of Entity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Retirement_Sponsorship__c</fullName>
        <inlineHelpText>Does this entity sponsor a retirement plan?</inlineHelpText>
        <label>Retirement Sponsorship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Date_and_Time_of_Meeting_Held__c</fullName>
        <description>Special Directors Meeting - Corp</description>
        <label>SD Date and Time of Meeting Held</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SD_Meeting_Address__c</fullName>
        <description>Special Directors Meeting - Corp</description>
        <label>Special Directors Meeting Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shareholders_Present__c</fullName>
        <label>Shareholders Present</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Directors_Meeting_Chairman__c</fullName>
        <label>Special Directors Meeting Chairman</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Directors_Meeting_Secretary__c</fullName>
        <label>Special Directors Meeting Secretary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Directors_Present__c</fullName>
        <label>Special Directors Present</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Dissolution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Dissolution</fullName>
        <columns>Client__c</columns>
        <columns>NAME</columns>
        <columns>Name_of_Entity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:1</value>
        </filters>
        <label>Dissolution Recent</label>
    </listViews>
    <nameField>
        <label>Dissolution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dissolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>